# VistaThemePlasma

./: .gitignore  DOCUMENTATION.md  INSTALL.md  README.md  install_misc_components.sh  install_plasma_components.sh
Vista/misc/kvantum/Kvantum/: kvantum.kvconfig
Vista/misc/shortcuts/: Show desktop.desktop
docs/kwin/: effectsjs.md
docs/plasma/: lookandfeel.md  plasmoids.md
extras/Extra apps/executebin/: executedlg.cpp  executedlg.h  executedlg.ui  install.sh  main.cpp  shell32.qrc
extras/Win7 M2/io.gitgud.catpswin56.m2tasks/contents/config/: main.xml
extras/Win7 M2/io.gitgud.catpswin56.m2tasks/contents/ui/: ConfigAppearance.qml  Task.qml  TaskList.qml  TasksMenu.qml  ToolTip.qml  WindowThumbnail.qml  main.qml
extras/extra-components/uac-polkitagent/: install.sh  install_ninja.sh
extras/extra-components/uac-polkitagent/patches/: QuickAuthDialog.cpp  QuickAuthDialog.qrc
extras/extra-components/uac-polkitagent/patches/qml/: QuickAuthDialog.qml
extras/io.gitgud.catpswin56.sidebartrayicon/: metadata.json
kwin/decoration/: .kateproject.build
kwin/decoration/breeze-v5.93.0/kdecoration/: breezedecoration.cpp  breezedecoration.h
kwin/decoration/breeze-v5.93.0/kdecoration/smod/: smoddecoration.cpp
kwin/decoration/kdecoration/: breezebutton.cpp  breezebutton.h  breezedecoration.cpp  breezedecoration.h  breezesettingsdata.kcfg
kwin/decoration/kdecoration/smod/: smodbutton.cpp  smoddecoration.cpp
kwin/effects/dimscreen/contents/code/: main.js
kwin/effects/fadingpopups/contents/code/: main.js
kwin/effects/smodpeekeffect/contents/code/: main.js
kwin/effects_cpp/kde-effects-aeroglassblur/src/: blur.cpp  blur.kcfg
kwin/tabbox/flipswitch/contents/ui/: main.qml
misc/branding/: kcm-about-distrorc
misc/kvantum/Kvantum/WindowsVistaKvantum_Aero/: WindowsVistaKvantum_Aero.kvconfig
misc/plymouth/PlymouthVista/: PlymouthVista.script  install.sh
misc/shortcuts/: Show desktop.desktop  Switch windows.desktop  Windows Sidebar.desktop
plasma/desktoptheme/Vista-Black/: metadata.json
plasma/desktoptheme/Vista-Black/dialogs/: background.svgz
plasma/layout-templates/io.gitgud.catpswin56.vistataskbar/: metadata.json
plasma/layout-templates/io.gitgud.catpswin56.vistataskbar/contents/: layout.js
plasma/look-and-feel/authuiVista/: metadata.json
plasma/look-and-feel/authuiVista/contents/: defaults
plasma/look-and-feel/authuiVista/contents/logout/: Logout.qml
plasma/plasmoids/io.gitgud.catpswin56.battery/contents/ui/: main.qml
plasma/plasmoids/io.gitgud.catpswin56.digitalclocklite/: metadata.desktop  metadata.json
plasma/plasmoids/io.gitgud.catpswin56.gadgets.rssfeeds/: metadata.json
plasma/plasmoids/io.gitgud.catpswin56.networkmanagement/: metadata.json
plasma/plasmoids/io.gitgud.catpswin56.quicklaunch/: metadata.json
plasma/plasmoids/io.gitgud.catpswin56.sidebar/: metadata.json
plasma/plasmoids/io.gitgud.catpswin56.vistadesktop/: metadata.json
plasma/plasmoids/io.gitgud.catpswin56.vistatasks/: metadata.json
plasma/plasmoids/io.gitgud.catpswin56.volumemixer/: metadata.json
plasma/plasmoids/io.gitgud.wackyideas.seventasks/contents/: Task.qml
plasma/plasmoids/org.kde.plasma.systemtray/: metadata.json
plasma/plasmoids/src/notifications_src/: CMakeLists.txt
plasma/plasmoids/src/quicklaunch_src/: CMakeLists.txt
plasma/plasmoids/src/quicklaunch_src/src/: CMakeLists.txt
plasma/plasmoids/src/seventasks_src/: CMakeLists.txt
plasma/plasmoids/src/sidebar_src/: CMakeLists.txt
plasma/plasmoids/src/sidebar_src/src/: CMakeLists.txt  sidebar.cpp  sidebar.h
plasma/plasmoids/src/systemtray_src/: CMakeLists.txt
plasma/sddm/login-sessions/: CMakeLists.txt  startvtp-wayland.cmake  vistathemeplasmawayland.desktop.cmake  vistathemeplasmax11.desktop.cmake
plasma/sddm/sddm-theme-mod/: Main.qml  metadata.desktop  test-theme.sh  theme.conf
plasma/sddm/sddm-theme-mod/SMOD/: Menu.qml  UserDelegate.qml  VirtualKeyboard.qml
plasma/sddm/sddm-theme-modd/: Main.qml
plasma/shells/org.kde.plasma.desktop/contents/: defaults
plasma/smod/: decoration.smod.rcc
plasma/smod/decorations/: Aero.smod.rcc  VistaAero.smod.rcc
(+199 files in other folders)
